--- a/www/index.html
+++ b/www/index.html
@@ -11,10 +11,14 @@
 
 <!-- as of ZIM 4.3.0 load createjs namespace first -->
 <script src="libraries/createjs-2015.11.26.min.js"></script>
-<script>var zon = true; // true for comments from zim code</script>
-<script src="libraries/zim_5.4.0.js"></script><!-- add _doc to see code -->
-<!-- use zimjs.com/code/distill for minified individual functions! -->
+<script>
+	var zon = true; // true for comments from zim code
+	var zns = false; // false for do not require zim namespace
+</script>
+<script src="libraries/zim_5.5.0.js"></script> -->
+<!-- add _doc to see code -->
 
+<!-- use zimjs.com/code/distill for minified individual functions! -->
 <script src="scripts/model.js"></script>
 <script src="scripts/view.js"></script>
 <script src="scripts/controller.js"></script>
@@ -22,7 +26,7 @@
 
 var stage, stageW, stageH;
 
-var frame = new zim.Frame();
+var frame = new Frame();
 frame.on("ready", function() {
 
 	stage = frame.stage;
@@ -33,10 +37,10 @@ frame.on("ready", function() {
 	frame.loadAssets("logo.jpg", "assets/");
 	frame.on("complete", function() {
 
-		var layoutManager = new zim.LayoutManager();
+		var layoutManager = new LayoutManager();
 		var view = app.makeView(layoutManager);
 
-		var pages = new zim.Pages([
+		var pages = new Pages([
 			view.page1,
 			{page:view.page2, swipe:[null,view.page3,null,null]},
 			{page:view.page3, swipe:[view.page2,null,null,null]},
